--- a/Question1-HTML.html
+++ b/Question1-HTML.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-<img src="lab2/send.jpg" width="150" />
+<img src="lab2/send.jpg" alt="Send" width="150" >
 <h1>Wikivoyage</h1>
 <p>How to edit a page</p>
 
@@ -12,8 +12,8 @@
 
   <li>If you are starting a new page from the beginning, please make use of our <strong>strong <em>article skeletons</strong></em></li>
 
-  <li>To view article history, click on the "history" tab for any article. Let's</li>
-      <a> at an example on <href= "https://en.wikivoyage.org/wiki/File:Be_bold2.svg>Wikipedia homepage</a>
+  <li>To view article history, click on the "history" tab for any article. Let's at an example on 
+      <a href= "https://en.wikivoyage.org/wiki/File:Be_bold2.svg" > Wikipedia homepage</a></li>
 </ul>
 </body>
 </html>
