--- a/Question1-HTML.html
+++ b/Question1-HTML.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="">
-<head>
-</head>
+<head>Question 1</head>
 <body>
 <img src="lab2/send.jpg" alt="Send" width="150" >
 <h1>Wikivoyage</h1>
@@ -10,7 +9,7 @@
 <ul>
   <li>If you are logged in to a user account there will be a <strong>"This is a minor edit"</strong></li>
 
-  <li>If you are starting a new page from the beginning, please make use of our <strong>strong <em>article skeletons</strong></em></li>
+  <li>If you are starting a new page from the beginning, please make use of our <strong>strong </strong><em>article skeletons</em></li>
 
   <li>To view article history, click on the "history" tab for any article. Let's at an example on 
       <a href= "https://en.wikivoyage.org/wiki/File:Be_bold2.svg" > Wikipedia homepage</a></li>
