--- a/Question1-HTML.html
+++ b/Question1-HTML.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="">
-<head>Question 1</head>
+<title>Question 1</title>
 <body>
 <img src="lab2/send.jpg" alt="Send" width="150" >
 <h1>Wikivoyage</h1>
