--- a/Question2-CSS.html
+++ b/Question2-CSS.html
@@ -3,10 +3,17 @@
 <head>
    <title>Question 2 - CSS</title>
    <style>
-    .mainsection a {
-      text-decoration: none;
-      color: #414040;
-      outline: none;
+    
+    a{
+      font-size: 24px;
+    }
+
+    a:link{
+      color: #420eed;
+    }
+
+    a:hover{
+      color: rgb(246, 23, 71);
     }
 
     
