--- a/Question1-HTML.html
+++ b/Question1-HTML.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 <title>Question 1</title>
 <body>
 <img src="lab2/send.jpg" alt="Send" width="150" >
