fixing the size
Fixing the size

--- a/Question2-CSS.html
+++ b/Question2-CSS.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <title>Question 2 - CSS</title>
-   <style>
+  <title>Question 2 - CSS</title>
+    <style>
     
     a{
-      font-size: 24px;
+      font-size: 16px;
+      margin-bottom: 10px;
+      margin-top: 10px;
     }
 
     a:link{
