--- a/Question3-CSSandHTML.html
+++ b/Question3-CSSandHTML.html
@@ -19,7 +19,7 @@
 
     body {
       padding: 20px;
-      background-color: #2f2f2f;
+      background-color: #f4eded;
     }
 
     h1, h2, p {
@@ -34,7 +34,8 @@
 
   <p>What causes errors in HTML?</p>
 
-  <div class="button">Submit answers</div>
+  <button type="button" onclick="alert('Hello there!')">Submit answers</button>
+
 
 </body>
 
