--- a/Question2-CSS.html
+++ b/Question2-CSS.html
@@ -9,6 +9,7 @@
       margin-bottom: 10px;
       margin-top: 10px;
       padding: auto;
+      text-decoration: none;
     }
 
     a:link{
@@ -17,6 +18,7 @@
 
     a:hover{
       color: rgb(246, 23, 71);
+      text-decoration: underline;
     }
 
     a:focus{
