--- a/Question3-CSSandHTML.html
+++ b/Question3-CSSandHTML.html
@@ -34,7 +34,7 @@
 
   <p>What causes errors in HTML?</p>
 
-  <button type="button" onclick="alert('Hello there!')">Submit answers</button>
+  <button type="button" onclick="alert('Hello there!')" alt="Submit answers button">Submit answers</button>
 
 
 </body>
