--- a/Question2-CSS.html
+++ b/Question2-CSS.html
@@ -3,6 +3,15 @@
 <head>
   <title>Question 2 - CSS</title>
     <style>
+
+    h1{
+      background-image: url(lab2/backgroundimg.gif);
+      position:relative;
+      display: inline-block;
+      margin:0 25px;
+      padding:0 10px;
+      height:40px;
+    }
     
     a{
       font-size: 16px;
@@ -29,7 +38,7 @@
 </head>
 <body>
 <div class="mainsection">
-<h1><img src="lab2/lab2-imageoftext.gif" alt="Shopping categories"></h1>
+<h1>Shopping categories</h1>
 
 <ul>
   <li><a href="#">Animals</a></li>
